--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,9 +25,10 @@ archives:
   id: archive
 snapshot:
   name_template: "{{ .Tag }}-SNAPSHOT"
-changelog:
-  disable: true
+# changelog: { disable: true } # We pass GoReleaser a CHANGELOG to use
 release:
+  extra_files:
+    - glob: release_sha.txt # We need release_sha to generate accurate changelogs
   github:
     owner: pulumi
     name: pulumi-terraform-provider
