--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,7 +28,7 @@ snapshot:
 # changelog: { disable: true } # We pass GoReleaser a CHANGELOG to use
 release:
   extra_files:
-    - glob: release_sha.txt # We need release_sha to generate accurate changelogs
+    - glob: ../release_sha.txt # We need release_sha to generate accurate changelogs
   github:
     owner: pulumi
     name: pulumi-terraform-provider
