--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,4 @@
 project_name: pulumi-terraform-provider
-version: 2
 builds:
 - dir: dynamic
   env:
@@ -32,3 +31,10 @@ release:
     owner: pulumi
     name: pulumi-terraform-provider
   disable: false
+blobs:
+- provider: s3
+  region: us-west-2
+  bucket: get.pulumi.com
+  folder: releases/plugins/
+  ids:
+  - archive
